syntax = "proto3";

package leads;

import "google/protobuf/empty.proto";

option java_package = "com.proto.leads";
option java_multiple_files = true;

message LeadResponse {
  int64 id = 1;
  string name = 2;
  string sale = 3;
  int64 userId = 4;
  int64 statusId = 5;
  repeated int64 contactsId = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message ReadLeadRequest {
  int64 leadId = 1;
}

service LeadService {
  rpc ReadLead(ReadLeadRequest) returns (LeadResponse) {};

  rpc ReadLeads(stream ReadLeadRequest) returns (stream LeadResponse) {};
}